<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <groupId>org.modeshape</groupId>
    <artifactId>jcr-perf-tests</artifactId>
    <version>1.0.0-SNAPSHOT</version>


    <properties>
        <java.version>1.6</java.version>
        <junit.version>4.8.2</junit.version>
        <slf4j.api.version>1.6.1</slf4j.api.version>
        <slf4j.log4j.version>1.6.1</slf4j.log4j.version>
        <log4j.version>1.2.16</log4j.version>
        <jcr.version>2.0</jcr.version>
        <reflections.version>0.9.5</reflections.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <surefire.debug></surefire.debug>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Java Content Repository API -->
            <dependency>
                <groupId>javax.jcr</groupId>
                <artifactId>jcr</artifactId>
                <version>${jcr.version}</version>
            </dependency>

            <dependency>
                <groupId>org.modeshape</groupId>
                <artifactId>perf-tests-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.api.version}</version>
            </dependency>

            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${reflections.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.log4j.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <plugins>
            <!-- Specify the compiler options and settings -->
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <configuration>
                <source>${java.version}</source>
                <target>${java.version}</target>
                <showDeprecation>false</showDeprecation>
                <showWarnings>false</showWarnings>
              </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <runOrder>alphabetical</runOrder>
                    <enableAssertions>true</enableAssertions>
                    <argLine>-Xmx1524M -XX:PermSize=256m ${surefire.debug}</argLine>
                    <systemProperties combine.children="append">
                      <property>
                        <name>test.jcr.configuration.name</name>
                        <value>${configuration.name}</value>
                      </property>
                      <property>
                        <name>java.io.tmpdir</name>
                        <value>${basedir}/target</value>
                      </property>
                      <property>
                        <name>java.net.preferIPv4Stack</name>
                        <value>${jgroups.preferIpv4}</value>
                      </property>
                      <property>
                        <name>java.net.preferIPv6Addresses</name>
                        <value>${jgroups.preferIpv6}</value>
                      </property>
                      <property>
                        <name>java.net.preferIPv6Addresses</name>
                        <value>${jgroups.preferIpv6}</value>
                      </property>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <!-- These need to be enable here and added as dependencies in 'perf-tests-report' -->
        <module>perf-tests-api</module>
        <module>jackrabbit-2.5.2-tests</module>
        <module>jackrabbit-2.7.0-tests</module>
        <module>modeshape-2.7.0.Final-tests</module>
        <module>modeshape-2.8.2.Final-tests</module>
        <module>modeshape-3.0.x.Final-tests</module>
        <module>modeshape-3.1.x-tests</module>
        <module>modeshape-3.2.x-tests</module>
        <module>modeshape-3.3.x-tests</module>
        <module>modeshape-3.4.x-tests</module>
        <module>modeshape-3.5.x-tests</module>
        <module>modeshape-3.6.x-tests</module>
        <!--module>modeshape-3.7.x-tests</module-->
        <module>modeshape-latest-tests</module>
        <module>perf-tests-report</module>
    </modules>

    <profiles>
      <profile>
        <id>debug</id>
        <properties>
          <surefire.debug>-Xnoagent -Djava.compiler=NONE -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</surefire.debug>
        </properties>
      </profile>
        
      <!-- Test profile that tests an in-memory repository -->
      <profile>
        <id>local-inmemory</id>
          <activation>
            <activeByDefault>true</activeByDefault>
          </activation>
          <properties>
            <configuration.name>local-inmemory</configuration.name>
          </properties>
      </profile>
      
      <!-- Test profile that tests a repository that persists to the local filesystem -->
      <profile>
        <id>local-filesystem</id>
        <properties>
          <configuration.name>local-filesystem</configuration.name>
        </properties>
      </profile>
    </profiles>
</project>